feat: add command palette
Signed-off-by: Ivin Joel Abraham <ivinjoelabraham@proton.me>

--- a/templates/resources.gresource.xml
+++ b/templates/resources.gresource.xml
@@ -2,5 +2,6 @@
 <gresources>
   <gresource prefix="/templates/">
     <file compressed="true" preprocess="xml-stripblanks">window.ui</file>
+    <file>style.css</file>
   </gresource>
 </gresources>
