--- a/templates/window.ui
+++ b/templates/window.ui
@@ -6,10 +6,60 @@
     <property name="default-height">800</property>
 
     <child>
-      <object class="GtkNotebook" id="notebook">
-        <property name="show-tabs">false</property>
-        <property name="show-border">false</property>
+      <object class="GtkOverlay" id="main_overlay">
+
+        <child>
+          <object class="GtkNotebook" id="notebook">
+            <property name="show-tabs">false</property>
+            <property name="show-border">false</property>
+          </object>
+        </child>
+
+        <child type="overlay">
+          <object class="GtkBox" id="command_palette_container">
+            <property name="visible">false</property>
+            <property name="orientation">vertical</property>
+            <property name="halign">center</property>
+            <property name="valign">start</property>
+            <property name="margin-top">100</property>
+            <property name="width-request">700</property>
+            <property name="spacing">0</property>
+
+            <style>
+              <class name="command-palette" />
+            </style>
+
+            <child>
+              <object class="GtkSearchEntry" id="command_entry">
+                <property name="placeholder-text">type</property>
+                <property name="hexpand">true</property>
+              </object>
+            </child>
+
+            <child>
+              <object class="GtkScrolledWindow" id="results_scroll">
+                <property name="max-content-height">400</property>
+                <property name="propagate-natural-height">true</property>
+                <property name="vexpand">true</property>
+
+                <child>
+                  <object class="GtkListBox" id="results_lists">
+                  <property name="selection-mode">single</property>
+
+                  <style>
+                    <class name="results_list" />
+                  </style>
+                  </object>
+                </child>
+
+              </object>
+            </child>
+
+          </object>
+        </child>
+
       </object>
+
     </child>
   </template>
 </interface>
